# spacer_count

./: .gitignore  README.md  main.py  pyproject.toml
spacer_count/: CLI.py  SpacerCounter.py
src/: spacer_counter.py
tests/: test_counter.py
