[project]
name = "spacer-count"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "biopython>1.84",
    "pandas>2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[project.scripts]
spacer-count = "spacer_count.CLI:main"

[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]

[tool.setuptools.packages.find]
include = ["spacer_count*"]
exclude = ["data*", 'tests*']

